# cascade

./: .clippy.toml  .dockerignore  .gitignore  .gitlint  Cargo.toml  Makefile  README.md  release-plz.toml
crates/backend-gdrive/: Cargo.toml
crates/backend-gdrive/examples/: cleanup_macos_junk.rs
crates/backend-gdrive/src/: auth.rs  client.rs  lib.rs  model.rs  token_store.rs
crates/backend-gdrive/tests/: gdrive_http.rs  gdrive_integration.rs
crates/backend-local/: Cargo.toml
crates/backend-local/src/: lib.rs  manifest.rs
crates/backend-local/tests/: local_integration.rs
crates/backend-p2p/: CHANGELOG.md  Cargo.toml
crates/backend-p2p/src/: index.rs  lib.rs  lib_tests.rs  peer_relay.rs  sync.rs  sync_sync_engine_send_check.rs  sync_tests.rs
crates/backend-p2p/src/sync/: conflict_path.rs  relay_session.rs
crates/backend-p2p/tests/: f1_namespace_fix.rs  f2_explicit_control.rs  f3_startup_window.rs  manage_daemon_wiring.rs  manage_roundtrip.rs  sync_integration.rs
crates/backend-s3/: Cargo.toml
crates/backend-s3/src/: lib.rs  signing.rs
crates/backend-s3/tests/: multipart_upload.rs  range_read.rs
crates/cascade/: CHANGELOG.md  Cargo.toml  Dockerfile  docker-entrypoint.sh
crates/cascade-announce-wire/: CHANGELOG.md  Cargo.toml
crates/cascade-announce-wire/src/: auth.rs  candidate.rs  handler.rs  lib.rs  seed.rs  signing.rs  wire.rs
crates/cascade-backend-fsaccess/: CHANGELOG.md  Cargo.toml
crates/cascade-backend-fsaccess/src/: backend.rs  js.rs  lib.rs  wasm_tests.rs
crates/cascade-backend-fsaccess/tests/js/: fsaccess_stub.js
crates/cascade-config/: Cargo.toml
crates/cascade-config/src/: lib.rs  merge.rs  types.rs
crates/cascade-config/src/parse/: gitignore.rs  json.rs  mod.rs  toml.rs  yaml.rs
crates/cascade-ffi/: CHANGELOG.md  Cargo.toml
crates/cascade-ffi/bindings/swift/: cascade_ffi.swift  cascade_ffiFFI.h  cascade_ffiFFI.modulemap
crates/cascade-ffi/src/: lib.rs
crates/cascade-p2p-webrtc/: CHANGELOG.md  Cargo.toml
crates/cascade-p2p-webrtc/src/: config.rs  js.rs  lib.rs  transport.rs  wasm_tests.rs
crates/cascade-p2p-webrtc/tests/js/: webrtc_stub.js
crates/cascade-wasm/: CHANGELOG.md  Cargo.toml
crates/cascade-wasm/src/: caps.rs  context.rs  lib.rs  router.rs  state.rs
crates/cascade-web-api/: CHANGELOG.md  Cargo.toml
crates/cascade-web-api/src/: auth.rs  error.rs  lib.rs  request_id.rs  router.rs  state.rs  ticket.rs
crates/cascade-web-api/src/routes/: audit.rs  auth.rs  backends.rs  cache.rs  config.rs  exec.rs  files.rs  grants.rs  health.rs  mod.rs  peers.rs  pins.rs  policies.rs  session.rs  shares.rs  tokens.rs
crates/cascade-web-api/src/schemas/: audit.rs  backends.rs  cache.rs  common.rs  config.rs  files.rs  grants.rs  health.rs  mod.rs  peers.rs  pins.rs  policies.rs  session.rs  shares.rs  tokens.rs
crates/cascade-web-api/tests/: contract.rs  routes.rs
crates/cascade/src/: main.rs
crates/cascade/src/cli/: auth.rs  cache.rs  config.rs  files.rs  grant.rs  init.rs  mod.rs  mount.rs  mount_tests.rs  projfs_provider.rs  remote.rs  share.rs  status.rs  token.rs  tui.rs
crates/cascade/tests/: cache_lifecycle.rs  cache_manager_eviction.rs  cascade_config.rs  config_e2e.rs  conflict_and_vfs.rs  data_authority.rs  db_lifecycle.rs  engine_lifecycle.rs  expr_eval.rs  init_config.rs  nfs_fuse_integration.rs  p2p_e2e.rs  p2p_integration.rs  p2p_properties.rs  vfs_routing.rs  vfs_tree.rs
crates/engine/: Cargo.toml
crates/engine/src/: backend.rs  changefeed.rs  config.rs  engine.rs  lib.rs  p2p_bridge.rs  presenter.rs  protocol.rs  types.rs
crates/engine/src/cache/: lifecycle.rs  manager.rs  mod.rs  pin.rs
crates/engine/src/db/: mod.rs  schema.rs
crates/engine/src/engine/: data_authority.rs  manage_dispatch.rs  mod.rs  operations.rs  tests.rs
crates/engine/src/manage/: dispatch.rs  dispatch_tests.rs  mod.rs  token.rs
crates/engine/src/portable/: mod.rs  native.rs  wasm.rs  wasm_io.rs
crates/engine/src/sync/: conflict.rs  mod.rs  mount_path.rs  runner.rs
crates/engine/src/vfs/: mod.rs  tree.rs
crates/engine/tests/: conformance_tokens.rs
crates/exec/: CHANGELOG.md  Cargo.toml
crates/exec/src/: error.rs  lib.rs  local.rs  proc.rs  pty.rs  session.rs
crates/expr/: Cargo.toml
crates/expr/src/: ast.rs  context.rs  eval.rs  eval_tests.rs  grammar.pest  lib.rs  providers.rs  providers_tests.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: block.rs  candidate.rs  connection.rs  discovery.rs  exec_stream.rs  framed.rs  identity.rs  lib.rs  nat.rs  pipe.rs  protocol.rs  protocol_tests.rs  relay.rs  rendezvous.rs  store.rs  transport.rs  traversal.rs  wan.rs
crates/p2p/src/discovery/: announce.rs  dht.rs  gossip.rs  lan.rs  mod.rs  signing.rs
crates/p2p/tests/: conformance_frames.rs  conformance_handshake.rs  exec_data_plane.rs  nat_integration.rs  serverless_rungs.rs
crates/presenter-fileprovider/: Cargo.toml
crates/presenter-fileprovider/src/: bridge.rs  engine_handlers.rs  engine_handlers_tests.rs  handlers.rs  items.rs  lib.rs  server.rs  wire.rs
crates/presenter-fileprovider/tests/: fileprovider_integration.rs
crates/presenter-fuse/: Cargo.toml
crates/presenter-fuse/src/: inode.rs  lib.rs  ops.rs
crates/presenter-nfs/: Cargo.toml
crates/presenter-nfs/src/: lib.rs
crates/presenter-nfs/src/nfs/: context.rs  mod.rs  xdr.rs  (+4 more)
crates/presenter-projfs/: CHANGELOG.md  Cargo.toml
crates/presenter-projfs/src/: lib.rs  lib_tests.rs
crates/presenter-projfs/tests/: projfs_live.rs
crates/presenter-webdav/: Cargo.toml
crates/presenter-webdav/src/: lib.rs  server.rs  server_tests.rs
crates/presenter-webdav/tests/: tls_repro_harness.rs  tls_topology_repro.rs
crates/relay-server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cascade-relay-start.sh  cascade-relay.service  docker-entrypoint.sh  relay.env.example
crates/relay-server/src/: announce.rs  auth.rs  config.rs  lib.rs  main.rs  metrics.rs  pipe.rs  server.rs  session.rs
crates/relay-server/tests/: announce.rs  integration.rs
workers/announce/: Cargo.toml  DEPLOY.md  wrangler.toml
workers/announce/src/: lib.rs
(+157 files in other folders)
