[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/cascade-config",
    "crates/expr",
    "crates/backend-gdrive",
    "crates/backend-s3",
    "crates/presenter-nfs",
    "crates/backend-local",
    "crates/presenter-fuse",
    "crates/presenter-fileprovider",
    "crates/cascade",
    "crates/p2p",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Expression parser
pest = "2"
pest_derive = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP (for backends)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-core = "0.3"
url = "2"

# Cryptography (used by backend-s3)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# OS process management (Unix-only)
nix = { version = "0.29", features = ["signal", "process"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
dead_code = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_must_use = "deny"
unused_variables = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Lints allowed because they are metadata/doc concerns not worth enforcing at this stage.
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"

# Style lints that are too noisy for the current codebase shape.
module_name_repetitions = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
default_trait_access = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"

# Correctness lints — deny outright.
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
