[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/exec",
    "crates/cascade-config",
    "crates/expr",
    "crates/backend-gdrive",
    "crates/backend-s3",
    "crates/presenter-nfs",
    "crates/backend-local",
    "crates/backend-p2p",
    "crates/presenter-fuse",
    "crates/presenter-fileprovider",
    "crates/presenter-fskit",
    "crates/cascade",
    "crates/p2p",
    "crates/presenter-webdav",
    "crates/presenter-projfs",
    "crates/relay-server",
    "crates/cascade-announce-wire",
    "crates/cascade-web-api",
    # UniFFI bridge exposing the native engine to Swift/Kotlin mobile nodes. Built
    # without the engine's exec feature so it cross-compiles to aarch64-apple-ios;
    # verify the mobile build with:
    #   cargo build -p cascade-ffi --target aarch64-apple-ios
    "crates/cascade-ffi",
    # cascade-wasm compiles to wasm32-unknown-unknown only. On native targets it
    # builds as an empty lib — all public functions are cfg-gated on wasm32 and
    # all deps are target-specific. Verify with:
    #   cargo check -p cascade-wasm --target wasm32-unknown-unknown
    "crates/cascade-wasm",
    # cascade-backend-fsaccess and cascade-p2p-webrtc compile to
    # wasm32-unknown-unknown only. On native targets they build as empty libs —
    # every module and public item is cfg-gated on wasm32 and all deps are
    # target-specific. Verify with:
    #   cargo check -p cascade-backend-fsaccess --target wasm32-unknown-unknown
    #   cargo check -p cascade-p2p-webrtc --target wasm32-unknown-unknown
    "crates/cascade-backend-fsaccess",
    "crates/cascade-p2p-webrtc",
]
# The announce Worker (workers/announce) compiles only to
# wasm32-unknown-unknown — it links the `worker` crate's JS glue — so it is
# deliberately not a workspace member: a native `cargo build` / `cargo test
# --workspace` must not try to build it. It declares its own `[workspace]` table
# so cargo does not walk up into this manifest, and is verified separately with
# `cargo check --target wasm32-unknown-unknown` from its own directory.
exclude = [
    "workers/announce",
]

[workspace.package]
version = "0.1.140"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Expression parser
pest = "2"
pest_derive = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP (for backends)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
urlencoding = "2"
futures-core = "0.3"
url = "2"

# Cryptography (used by backend-s3)
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
# ed25519 signing for self-certifying announce/DHT candidate sets (cascade-p2p);
# pinned to the build mainline depends on so the device-derived keypair is
# byte-compatible across both transports.
ed25519-dalek = "3.0.0-rc.0"

# Binary encodings (base32/base64 for opaque cursors and device IDs)
data-encoding = "2"

# WASM bindings (used by crates/cascade-wasm; pinned to the lockfile versions)
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# OS process management (Unix-only)
nix = { version = "0.31", features = ["signal", "process"] }

# Platform config / cache paths
dirs = "6"

# Network interface enumeration (used by cascade-p2p host candidate gathering)
if-addrs = "0.15"

[workspace.lints.rust]
# Denied at workspace level. Per-site #[allow] requires explicit justification
# (a comment naming the legitimate cross-platform or FFI need).
#
# These cannot be raised to `forbid` because macro expansions emit internal
# `#[allow]` attributes for hygiene — tracing emits #[allow(unused_imports,
# unused_must_use)], pest_derive emits #[allow(unused_variables)], and so on.
# Forbidding any of those would break every macro call site.
unsafe_code = "deny"
unused_imports = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_must_use = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Lints allowed because they are metadata/doc concerns not worth enforcing at this stage.
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"

# Style lints that are too noisy for the current codebase shape.
module_name_repetitions = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
default_trait_access = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"

# Correctness lints — deny outright in library and binary code. Per-site
# #[allow] requires justification.
#
# These four are clippy *restriction*-group lints: opt-in by design and not
# meant for test code, where `unwrap()`/`expect()`/indexing are idiomatic and
# a panic is the intended failure signal. Each crate root therefore carries
# `#![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used,
# clippy::indexing_slicing, clippy::string_slice))]`, and every integration
# test file (`tests/*.rs`) carries the plain `#![allow(...)]` form. That keeps
# the deny in force for shipping code while letting `cargo clippy --all-targets
# -- -D warnings` (run in CI) still enforce the full pedantic/nursery/cargo
# groups on tests. When adding a new crate or integration-test file, copy the
# attribute from an existing one.
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"

# Forbid #[allow] escapes for the cross-platform const-fn pattern: if a
# function is naturally const on one target and not on another, split it into
# two cfg-gated definitions rather than allowing the lint. See
# crates/expr/src/providers.rs DiskProvider::collect_for_path and
# crates/presenter-fuse/src/ops.rs FileAttr::{directory,file} for the pattern.
#
# missing_const_for_fn is a nursery lint already denied at the group level.
# It cannot be raised to `forbid` workspace-wide while legitimate `#[allow]`
# sites exist for it in macro-generated code (e.g. `tracing!` expansions) and
# in cfg-gated stubs that genuinely vary between targets. Promote to `forbid`
# only after every existing `#[allow(clippy::missing_const_for_fn)]` site has
# been migrated to a proper cfg-split impl.
missing_const_for_fn = "deny"
