[package]
name = "cascade-backend-local"
version.workspace = true
edition.workspace = true

# The local backend uses none of the engine's exec surface, so it requests the
# engine without its default `exec` feature. That keeps the exec capability
# provider (and its portable-pty -> serial -> termios chain, which does not build
# for iOS) out of any consumer that only needs the local backend, so the crate
# cross-compiles to mobile targets.
[dependencies]
cascade-engine = { path = "../engine", default-features = false, features = [
    "native",
    "p2p",
] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2 = "0.11"
hex = { workspace = true }
walkdir = "2"
fs2 = "0.4"
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
proptest = "1"
cascade-engine = { path = "../engine" }

[lints]
workspace = true
