[package]
name = "cascade-backend-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
cascade-p2p = { path = "../p2p", features = ["announce"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util", "sync", "time"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
toml.workspace = true
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.11"
dirs.workspace = true
futures-util = { version = "0.3.32", default-features = false }
tokio-tungstenite = { version = "0.29.0", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"

[lints]
workspace = true
