[package]
name = "cascade-backend-s3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
