[package]
name = "cascade-backend-s3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
