[package]
name = "cascade-backend-s3"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Native build: uses reqwest directly for HTTP. Enabled by default.
default = ["native"]
native = ["dep:reqwest"]
## Portable build: uses the cascade-engine HttpClient trait instead of reqwest.
## Enables cascade-engine's portable module which exposes the trait contracts.
portable = ["cascade-engine/portable"]
## Expose `new_for_test` and `multipart_upload_pub` for integration-test use.
## Never enable in release builds.
testing = []

[dependencies]
cascade-engine = { path = "../engine" }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, optional = true }
chrono = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
cascade-backend-s3 = { path = ".", features = ["testing"] }
mockito = "1.7.2"
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
