[package]
name = "cascade-backend-fsaccess"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser File System Access API backend for the Cascade WASM core"

# All dependencies are wasm32-only: on native targets the crate compiles as an
# empty lib with no code and no deps, so `cargo check --workspace` succeeds.
# Verify the WASM build with:
#   cargo check -p cascade-backend-fsaccess --target wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
thiserror.workspace = true
serde = { workspace = true }

[lints]
workspace = true
