[package]
name = "cascade-backend-fsaccess"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser File System Access API backend for the Cascade WASM core"

# Portable dependencies: the data types (FsAccessError, DirectoryChanges) and
# the struct accessors compile and run on the host too (gated on
# `cfg(any(target_arch = "wasm32", test))`), so their dependencies are available
# on every target. This lets the accessor contract be unit-tested natively.
[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true

# JavaScript-interop dependencies are wasm32-only: the `wasm-bindgen` exports,
# the async bridge methods, and the js-sys decode helpers exist only on the
# browser target.
# Verify the WASM build with:
#   cargo check -p cascade-backend-fsaccess --target wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

# wasm-bindgen-test is only useful on wasm32; including it in dev-dependencies
# unconditionally would cause a build failure on native targets because it
# links JS glue that doesn't exist there.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures.workspace = true

[features]
# Swap the production TypeScript module for a plain .js stub so that
# `wasm-pack test --node` can load the wasm-bindgen glue without a TypeScript
# transpiler or browser globals.  The stub (tests/js/fsaccess_stub.js) mirrors
# the production exports exactly.  Never enabled in a production wasm build.
js-test-stub = []

[lints]
workspace = true
