[package]
name = "cascade-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytesize = { version = "2.3.1", features = ["serde"] }
humantime = "2.3.0"

[dev-dependencies]

[lints]
workspace = true
