[package]
name = "cascade-wasm"
version.workspace = true
edition.workspace = true

# Produces a WASM module (cdylib) for JavaScript consumption and an rlib for
# Rust-to-Rust linking and test harness use.
[lib]
crate-type = ["cdylib", "rlib"]

# Portable dependencies: the request router, the in-memory engine state, and
# capability detection compile and run on the host too (gated on
# `cfg(any(target_arch = "wasm32", test))`), so their dependencies are available
# on every target. This lets the router contract be unit-tested natively.
[dependencies]
cascade-engine = { path = "../engine", default-features = false, features = ["portable"] }
serde_json.workspace = true
serde = { workspace = true }

# JavaScript-interop dependencies are wasm32-only: the `#[wasm_bindgen]` exports,
# the OAuth/WebRTC context handlers, and the JS-handle session plumbing exist
# only on the browser target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
cascade-config = { path = "../cascade-config" }
cascade-expr = { path = "../expr" }
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true

[lints]
workspace = true
