[package]
name = "cascade-web-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed HTTP JSON API the Cascade daemon serves for the PWA"

[dependencies]
cascade-engine = { path = "../engine" }
cascade-exec = { path = "../exec" }
cascade-p2p = { path = "../p2p" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
data-encoding.workspace = true
sha2.workspace = true
async-trait.workspace = true
tar = "0.4"
flate2 = "1"
ring = "0.17"

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[lints]
workspace = true
