[package]
name = "cascade"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cascade"
path = "src/main.rs"

[dependencies]
cascade-engine = { path = "../engine" }
cascade-config = { path = "../cascade-config" }
cascade-expr = { path = "../expr" }
cascade-backend-gdrive = { path = "../backend-gdrive" }
cascade-backend-s3 = { path = "../backend-s3" }
cascade-presenter-nfs = { path = "../presenter-nfs" }
cascade-presenter-webdav = { path = "../presenter-webdav" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
shellexpand = "3"
dirs = "6"
reqwest.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
cascade-p2p = { path = "../p2p" }
cascade-presenter-fuse = { path = "../presenter-fuse" }
tempfile = "3"
proptest = "1"
async-trait = "0.1"

[lints]
workspace = true
