[package]
name = "cascade"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cascade"
path = "src/main.rs"

[features]
# Serve the typed HTTP JSON API for the PWA. Off by default so `axum` does not
# build when the operator never passes `--web`.
web = ["dep:cascade-web-api"]

[dependencies]
cascade-engine = { path = "../engine" }
cascade-config = { path = "../cascade-config" }
cascade-expr = { path = "../expr" }
cascade-backend-gdrive = { path = "../backend-gdrive" }
cascade-backend-s3 = { path = "../backend-s3" }
cascade-backend-local = { path = "../backend-local" }
cascade-backend-p2p = { path = "../backend-p2p" }
cascade-p2p = { path = "../p2p" }
cascade-presenter-nfs = { path = "../presenter-nfs" }
cascade-presenter-webdav = { path = "../presenter-webdav" }
cascade-presenter-fskit = { path = "../presenter-fskit" }
cascade-presenter-fuse = { path = "../presenter-fuse" }
cascade-presenter-projfs = { path = "../presenter-projfs" }
cascade-web-api = { path = "../cascade-web-api", optional = true }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
shellexpand = "3"
dirs.workspace = true
reqwest.workspace = true
chrono.workspace = true
async-trait = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user"] }

# The File Provider presenter is macOS-only (the Swift extension bridges
# Finder to the engine over a Unix socket). The crate compiles
# cross-platform, but only the macOS daemon wires up its RPC server, so it
# is a macOS-target dependency.
[target.'cfg(target_os = "macos")'.dependencies]
cascade-presenter-fileprovider = { path = "../presenter-fileprovider" }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints]
workspace = true
