[package]
name = "cascade-engine"
version.workspace = true
edition.workspace = true

[dependencies]
cascade-config = { path = "../cascade-config" }
cascade-expr = { path = "../expr" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
cascade-p2p = { path = "../p2p", optional = true }
data-encoding.workspace = true
sha2 = { workspace = true }

[features]
# `native` carries the host-only runtime and storage backends — tokio,
# rusqlite, and reqwest none of which compile to wasm32. It is on by default so
# an ordinary `cargo build` is unaffected, and it supplies the native adapters
# in `portable::native` that bind the trait contracts to those crates. A wasm
# build drops it (`--no-default-features --features portable`) and supplies its
# own adapters behind the same contracts.
default = ["native", "p2p"]
native = ["dep:tokio", "dep:rusqlite", "dep:reqwest"]
# `p2p` pulls in the P2P block-sharing engine (cascade-p2p), the management-plane
# dispatch and signed capability tokens, and the p2p_bridge module. The ring C
# crate inside cascade-p2p does not compile to wasm32, so a WASM build drops this
# feature and loses remote management, token signing, and peer sync.
p2p = ["dep:cascade-p2p"]
# `portable` compiles the runtime/storage/HTTP/filesystem trait contracts in
# `portable`, which the core logic depends on instead of tokio/rusqlite/reqwest
# /std::fs directly. The traits carry no host-only types, so the module builds
# on any target.
portable = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"

[lints]
workspace = true

# WASM-only deps — used by the portable::wasm adapters (spawn_local, setTimeout).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window"] }
